# Comparison-of-Java-vs.-C-Memory-Management-Performance-Benchmarks

./: .gitignore  MakeFIle  Makefile  README.md  README_RU.md  benchmark_results.txt  benchmarks_config.ini  benchmarks_config.txt  dataGen.py  tableCreate.py
.github/workflows/: benchmark.yml  branch_delete.yml
C++/: AllocatorBench.hpp  AllocatorThreadBench.hpp  ByteBench.hpp  ByteNewBench.hpp  CMakeLists.txt  ComplexObjectBench.hpp  Complex_Object_Allocation.hpp  Concurrent_Multithreaded_Allocation_Performance.hpp  Fixed_Size_Allocation.hpp  Fragmentation_Test_Random_Allocation_Release.hpp  MemoryAccessBench.hpp  MemoryFragmentationBench.hpp  RecursiveAllocationBench.hpp  Recursive_Memory_Allocation.hpp  Variable_Size_Allocation.hpp  main.cpp
Java/: settings.gradle.kts
Java/app/: Java_Benchmark_results.txt  benchmark_results.txt  build.gradle.kts
Java/app/src/main/java/org/example/: AllocatorBench.java  AllocatorThreadBench.java  BenchmarkRunner.java  ByteBench.java  ComplexObjectBench.java  MemoryAccessBench.java  MemoryFragmentationBench.java  RecursiveAllocationBench.java
JavaJMH/: settings.gradle.kts
JavaJMH/app/: build.gradle.kts
JavaJMH/app/src/main/java/org/example/: AllocatorBench.java  AllocatorThreadBench.java  BenchmarkConfig.java  BenchmarkConfigLoader.java  BenchmarkParser.java  BenchmarkRunner.java  ByteBench.java  ComplexObjectBench.java  Complex_Object_Allocation.java  Concurrent_Multithreaded_Allocation_Performance.java  DataLoader.java  Fixed_Size_Allocation.java  Fragmentation_Test_Random_Allocation_Release.java  MemoryAccessBench.java  MemoryFragmentationBench.java  RecursiveAllocationBench.java  Recursive_Memory_Allocation.java  Variable_Size_Allocation.java
